@@ -99,6 +99,15 @@
 @cr-button-color--primary:      #000;
 @cr-button-bg-color--primary:   #cccccc;
 
+@cr-button-console-icon-color:              #fff;
+@cr-button-console-bg-color--hover:         #4e4e4e;
+@cr-button-console-bg-color--active:        #333;
+@cr-button-console-box-shadow--active:      0 0 3px -1px rgba(0,0,0,0.5);
+
+
+@cr-button-console-color--primary:      #fff;
+@cr-button-console-bg-color--primary:   #444;
+
 //
 // Table
 // -----------------------------------------------
